--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,7 +124,7 @@ extra_css:
     - assets/css/customization.css
 extra:
   SEO: assets/meta/SEO.png
-  comments: True #disable comments globally
+  comments: False #disable comments globally
   generate_graph: True #generate the graph of the site
   attachments: 'assets/img' #path to the folder where the attachments are stored
   no-auto-h1: True #disable the automatic generation of h1 if no h1 is found
