--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Yifu Ding # Change this to your site name
 site_description: Shared obsidian pages
-site_url: https://TWP-Share.github.io/TWP-Share # Change this to your site URL
+site_url: https://thinkwithpbody.github.io/TWP-Share # Change this to your site URL
 site_author: Yifu Ding
 
 theme:
@@ -9,27 +9,27 @@ theme:
     favicon: assets/meta/favicons.png
     custom_dir: overrides
     font:
-        text: Ubuntu
-        code: Ubuntu Mono
+        text: Roboto
+        code: Roboto Mono
     language: en
     palette:
 
     # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: teal
-      accent: light blue
+      primary: amber
+      accent: lime
       toggle:
-        icon: material/toggle-switch-off-outline
+        icon: material/lightbulb-outline
         name: Switch to dark mode
 
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: blue
-      accent: indigo
+      primary: amber
+      accent: lime
       toggle:
-        icon: material/toggle-switch
+        icon: material/lightbulb
         name: Switch to light mode
     features:
         - navigation.indexes
