--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ theme:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: amber
-      accent: lime
+      accent: yellow
       toggle:
         icon: material/lightbulb-outline
         name: Switch to dark mode
@@ -27,7 +27,7 @@ theme:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: amber
-      accent: lime
+      accent: yellow
       toggle:
         icon: material/lightbulb
         name: Switch to light mode
