--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,6 +99,7 @@ plugins:
   - custom-attributes:
       file: 'assets/css/custom_attributes.css'
   - tags:
+      enabled: false
       tags: false
       tags_hierarchy: true
       # tags_file: tags.md
