--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Yifu Ding # Change this to your site name
+site_name: Shared Notes by Yifu # Change this to your site name
 site_description: Shared obsidian pages
 site_url: https://thinkwithpbody.github.io/TWP-Share # Change this to your site URL
 site_author: Yifu Ding
